--- a/static/stylesheets/cah.css
+++ b/static/stylesheets/cah.css
@@ -1,6 +1,5 @@
 body {
-    border-color: #111;
-
+    border: none;
     /* Prevent selection of text */
     -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
@@ -10,7 +9,6 @@ body {
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
 }
-/* TODO: this is all kind of messy. Consider deleting a lot of these nitpicky rules and making a more consistent system. */
 header {
     display: none;
 }
@@ -23,14 +21,10 @@ header, main, footer {
 main {
     max-width: none;
 }
+
 #game {
+    /* Will be overridden when connection is successful. */
     display: none;
-}
-@media (min-width: 800px) {
-    header img {
-        height: 220px;
-        margin-left: 0;
-    }
 }
 #warning:empty {
     display: none;
