Use prohibited cursor over flipped CAH cards

--- a/static/stylesheets/cah.css
+++ b/static/stylesheets/cah.css
@@ -69,6 +69,7 @@ main {
 .cards.disabled {
     opacity: 0.5;
 }
-.cards.disabled .card {
+.cards.disabled .card,
+.card:empty{
     cursor: not-allowed;
 }
