Fix spelling on homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <div class="button-row">
     <a class="button groupme" href="/manager">Add on GroupMe</a>
 </div>
-<p>NOTE: This bot formerly ran on Facebook Messenger and Discord. This functionality was rarely used and as such is no longer surported.</p>
+<p>NOTE: This bot formerly ran on Facebook Messenger and Discord. This functionality was rarely used and as such is no longer supported.</p>
 <h3>Bot capabilities</h3>
 <p>Static commands: {% for static_command in static_commands %}<strong>!{{ static_command }}</strong>{{ ", " if not loop.last }}{% endfor %}</p>
 <ul>
