Link to manager

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <h3>A GroupMe chatbot for Yale University.</h3>
 <p>Yalebot boasts a wide variety of capabilities, including meme generation, face-recognition photo filters, inspirational quote generation, fun facts, and verification that a user is Yale-affiliated. It is an ideal tool for Yale GroupMe chats (although it's also active in non-Yale chats, such as those of the University of Pennsylvania, Ivy League 2023, University of Michigan, etc.). The bot is maintained by <a href="https://erikboesen.com"</a>Erik Boesen</a> '23.</p>
 <div class="button-row">
-    <a class="button groupme" href="/manager">Add on GroupMe</a>
+    <a class="button groupme" href="http://mebots.co/bot/yalebot">Add on GroupMe</a>
 </div>
 <p>NOTE: This bot formerly ran on Facebook Messenger and Discord. This functionality was rarely used and as such is no longer supported.</p>
 <h3>Bot capabilities</h3>
